# Torch_Depoly

./: .gitignore  ReadMe.md  TraceTorch.py  gener_onnx.py  main_cloud.py
Nets/: ZYNet.py
Nets/backbone/: builder.py  resnet.py
Production/: CMakeLists.txt  ExportONNX.py  TestValDataset.py  TraceTorch.py  model.mapping  model.onnx
Production/Extra_Code_wo_Verify/: ExportONNX.py  ONNX_Run_Python.py  main_all.cpp  main_openvino.cpp
Production/Seg/: Seg.sln  Seg.vcxproj  Seg.vcxproj.filters  main.cpp  main_all.cpp  main_openvino.cpp  model.onnx  model.xml  test.cpp
